# ircfs

./: .gitignore  Main.hs  README.markdown  ircfs.cabal
Filesystem/IRC/: Ctl.hs  IRCcon.hs  Target.hs
Ircfs/: CmdLine.hs  Connect.hs  Ctl.hs  Filesystem.hs  Inode.hs  Misc.hs  Process.hs  Types.hs
Network/IRC/: Enumerator.hs  Message.hs
Network/IRC/Message/: Encode.hs  Parser.hs  Types.hs
System/Fuse/: Request.hs
scripts/: irc-back  irc-join  irc-msg  irc-part  irc-servername  irc-whoami  irc-whois
tests/: TestDecode.hs  TestEncode.hs  Tests.hs
