name:               ircfs
version:            0.1.0
synopsis:           IRC file system
homepage:           http://github.com/bernstein/ircfs/
license:            BSD3
license-file:       LICENSE
category:           IRC
author:             Andreas-Christoph Bernstein <andreas.bernstein@googlemail.com>
maintainer:         Andreas-Christoph Bernstein <andreas.bernstein@googlemail.com>
copyright:          Andreas-Christoph Bernstein 2011
stability:          Beta
tested-with:        GHC == 7.0.3
cabal-version:      >= 1.6
build-type:         Simple
description:        Ircfs is an irc client with a fuse file system interface.
extra-source-files: 
  README.markdown
  tests/Makefile
  tests/TestDecode.hs

source-repository head
  type: git
  location: git://github.com/bernstein/ircfs.git

library
  exposed-modules:
    Network.IRC.Message
    Network.IRC.Message.Encode
    Network.IRC.Message.Parser
    Network.IRC.Message.Types
  build-depends:
    base,
    bytestring >= 0.9,
    blaze-builder,
    attoparsec,
    HFuse,
    unix,
    filepath,
    network,
    transformers,
    cmdargs,
    rope,
    mtl,
    data-lens,
    containers,
    time,
    old-locale

executable ircfs
  main-is:            Main.hs
  ghc-options:        -Wall -threaded
  other-modules:
    Network.IRC.Message
    Network.IRC.Message.Encode
    Network.IRC.Message.Parser
    Network.IRC.Message.Types
    Ircfs.Ctl
    Ircfs.Types
    Ircfs.CmdLine
    Ircfs.Process
    Ircfs.Inode
    Ircfs.Misc
